--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Santhosh\AppData\Local\Temp\testng-eclipse--1381626903\testng-customsuite.xml</span>
+                    <span>C:\Users\Santhosh\AppData\Local\Temp\testng-eclipse--1921855840\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SanthoshFramework.Practice.HashMapConcept" class="method navigator-link" hash-for-method="ActualSet(Kranthi, santhoshindia999@gmail.com, 8919224413)">ActualSet(Kranthi, santhoshindia999@gmail.com, 8919224413)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SanthoshFramework.Practice.HashMapConcept" class="method navigator-link" hash-for-method="ActualSet({phone=8919224413, email=santhoshindia999@gmail.com, Name=Kranthi})">ActualSet({phone=8919224413, email=santhoshindia999@gmail.com, Name=Kranthi})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SanthoshFramework.Practice.HashMapConcept" class="method navigator-link" hash-for-method="ActualSet(Santhosh, santhoshgrandhi9@gmail.com, 8332977899)">ActualSet(Santhosh, santhoshgrandhi9@gmail.com, 8332977899)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SanthoshFramework.Practice.HashMapConcept" class="method navigator-link" hash-for-method="ActualSet({phone=8332977899, email=santhoshgrandhi9@gmail.com, Name=Santhosh})">ActualSet({phone=8332977899, email=santhoshgrandhi9@gmail.com, Name=Santhosh})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,18 +131,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ActualSet(Kranthi, santhoshindia999@gmail.com, 8919224413)">
-                  </a> <!-- ActualSet(Kranthi, santhoshindia999@gmail.com, 8919224413) -->
+                  <a name="ActualSet({phone=8919224413, email=santhoshindia999@gmail.com, Name=Kranthi})">
+                  </a> <!-- ActualSet({phone=8919224413, email=santhoshindia999@gmail.com, Name=Kranthi}) -->
                   <span class="method-name">ActualSet</span>
-                  <span class="parameters">(Kranthi,santhoshindia999@gmail.com,8919224413)</span>
+                  <span class="parameters">({phone=8919224413, email=santhoshindia999@gmail.com, Name=Kranthi})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ActualSet(Santhosh, santhoshgrandhi9@gmail.com, 8332977899)">
-                  </a> <!-- ActualSet(Santhosh, santhoshgrandhi9@gmail.com, 8332977899) -->
+                  <a name="ActualSet({phone=8332977899, email=santhoshgrandhi9@gmail.com, Name=Santhosh})">
+                  </a> <!-- ActualSet({phone=8332977899, email=santhoshgrandhi9@gmail.com, Name=Santhosh}) -->
                   <span class="method-name">ActualSet</span>
-                  <span class="parameters">(Santhosh,santhoshgrandhi9@gmail.com,8332977899)</span>
+                  <span class="parameters">({phone=8332977899, email=santhoshgrandhi9@gmail.com, Name=Santhosh})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,7 +150,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Santhosh\AppData\Local\Temp\testng-eclipse--1381626903\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Santhosh\AppData\Local\Temp\testng-eclipse--1921855840\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -203,16 +203,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ActualSet')
 data.setCell(0, 2, 'SanthoshFramework.Practice.HashMapConcept')
-data.setCell(0, 3, 19);
+data.setCell(0, 3, 18);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'ActualSet')
 data.setCell(1, 2, 'SanthoshFramework.Practice.HashMapConcept')
-data.setCell(1, 3, 4);
+data.setCell(1, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 ms</span>
+              <span class="suite-total-time">Total running time: 21 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -240,12 +240,12 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">SanthoshFramework.Practice.HashMapConcept</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">ActualSet(Santhosh, santhoshgrandhi9@gmail.com, 8332977899)</span>
+                <span class="method-name">ActualSet({phone=8332977899, email=santhoshgrandhi9@gmail.com, Name=Santhosh})</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ActualSet(Kranthi, santhoshindia999@gmail.com, 8919224413)</span>
-                <span class="method-start">27 ms</span>
+                <span class="method-name">ActualSet({phone=8919224413, email=santhoshindia999@gmail.com, Name=Kranthi})</span>
+                <span class="method-start">25 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
